@@ -1,120 +1,281 @@
 package com.smooth.driving_analysis_service.reports.behavior.service;
 
-import com.smooth.driving_analysis_service.reports.behavior.dto.request.BehaviorDiffRequestDto;
-import com.smooth.driving_analysis_service.reports.behavior.dto.response.*;
-import com.smooth.driving_analysis_service.reports.behavior.dto.result.*;
-import com.smooth.driving_analysis_service.reports.behavior.entity.*;
-import com.smooth.driving_analysis_service.reports.behavior.repository.BehaviorDrivingRecordRepository;
-import com.smooth.driving_analysis_service.reports.behavior.service.BehaviorReportService;
+import com.smooth.driving_analysis_service.reports.behavior.dto.projection.EventPatternProjection;
+import com.smooth.driving_analysis_service.reports.behavior.dto.response.BehaviorAnalysisResponseDto;
+import com.smooth.driving_analysis_service.reports.behavior.dto.response.CompareDto;
+import com.smooth.driving_analysis_service.reports.behavior.dto.response.DrivingPatternDto;
+import com.smooth.driving_analysis_service.reports.behavior.dto.response.TotalCountsDto;
+import com.smooth.driving_analysis_service.reports.behavior.repository.BehaviorPatternRepository;
+import com.smooth.driving_analysis_service.reports.behavior.repository.BehaviorTotalCountsRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.List;
 
+/**
+ * 위험 행동 분석 서비스 구현체
+ * 
+ * Task 1: totalCounts (총합)
+ * Task 2: drivingPattern (시간대 패턴 분석)
+ * Task 3: compare (이전 vs 현재 비교)
+ */
+@Slf4j
 @Service
 @RequiredArgsConstructor
-@Transactional(readOnly = true)
 public class BehaviorReportServiceImpl implements BehaviorReportService {
 
-    private final BehaviorDrivingRecordRepository repo;
+    private final BehaviorTotalCountsRepository totalCountsRepository;
+    private final BehaviorPatternRepository behaviorPatternRepository;
+    private final BehaviorPatternAnalyzer patternAnalyzer;
+    private final BehaviorCompareAnalyzer compareAnalyzer;
 
     @Override
-    public BehaviorSummaryResponseDto getSummary(Long reportId) {
-        BehaviorSummaryResultDto r = fetchSummary(reportId);
-
-        return BehaviorSummaryResponseDto.builder()
-                .text(String.format("급제동 %d회 · 급가속 %d회 · 차선변경 %d회 (총 %d회)",
-                        r.getHardBrakeCount(), r.getRapidAccelCount(), r.getLaneChangeCount(), r.getTotal()))
-                .hardBrakeCount(r.getHardBrakeCount())
-                .rapidAccelCount(r.getRapidAccelCount())
-                .laneChangeCount(r.getLaneChangeCount())
-                .total(r.getTotal())
-                .build();
+    public BehaviorAnalysisResponseDto getBehaviorAnalysis(String reportId) {
+        log.info("Getting behavior analysis for reportId: {}", reportId);
+        
+        try {
+            // reportId에서 숫자 부분 추출 (u1_r3_20250901 -> 3)
+            Long reportIdLong = extractReportIdNumber(reportId);
+            
+            // Task 1: totalCounts 구현
+            TotalCountsDto totalCounts = getTotalCounts(reportIdLong);
+            
+            // Task 2: drivingPattern 구현
+            DrivingPatternDto drivingPattern = getDrivingPattern(reportIdLong);
+            
+            // Task 3: compare 구현
+            CompareDto compare = getCompare(reportIdLong, totalCounts);
+            
+            return BehaviorAnalysisResponseDto.builder()
+                    .reportId(reportId)
+                    .totalCounts(BehaviorAnalysisResponseDto.TotalCounts.builder()
+                            .hardBrake(totalCounts.getHardBrake())
+                            .rapidAccel(totalCounts.getRapidAccel())
+                            .laneChange(totalCounts.getLaneChange())
+                            .total(totalCounts.getTotal())
+                            .build())
+                    .drivingPattern(BehaviorAnalysisResponseDto.DrivingPattern.builder()
+                            .weekday(drivingPattern.getWeekday())
+                            .timeslot(drivingPattern.getTimeslot())
+                            .chart(convertToResponseChart(drivingPattern.getChart()))
+                            .comment(drivingPattern.getComment())
+                            .build())
+                    .compare(BehaviorAnalysisResponseDto.Compare.builder()
+                            .incdec(compare.getIncdec())
+                            .chart(BehaviorAnalysisResponseDto.Chart.builder()
+                                    .hardBrake(BehaviorAnalysisResponseDto.BeforeAfter.builder()
+                                            .before(compare.getChart().getHardBrake().getBefore())
+                                            .current(compare.getChart().getHardBrake().getCurrent())
+                                            .build())
+                                    .rapidAccel(BehaviorAnalysisResponseDto.BeforeAfter.builder()
+                                            .before(compare.getChart().getRapidAccel().getBefore())
+                                            .current(compare.getChart().getRapidAccel().getCurrent())
+                                            .build())
+                                    .laneChange(BehaviorAnalysisResponseDto.BeforeAfter.builder()
+                                            .before(compare.getChart().getLaneChange().getBefore())
+                                            .current(compare.getChart().getLaneChange().getCurrent())
+                                            .build())
+                                    .build())
+                            .build())
+                    .build();
+                    
+        } catch (Exception e) {
+            log.error("Error getting behavior analysis for reportId: {}", reportId, e);
+            return createDefaultResponse(reportId);
+        }
     }
 
-    @Override
-    public BehaviorTrajectoryResponseDto getTrajectory(Long reportId) {
-        List<TrajectoryPointResultDto> points = repo.findDominantPointsByItems(reportId)
-                .stream()
-                .map(r -> TrajectoryPointResultDto.builder()
-                        .behavior(BehaviorType.from(String.valueOf(r[0])))
-                        .dayOfWeek(((Number) r[1]).intValue())
-                        .timeSlot(TimeSlot.from(String.valueOf(r[2])))
-                        .count(((Number) r[3]).intValue())
+    /**
+     * Task 1: totalCounts 조회
+     */
+    private TotalCountsDto getTotalCounts(Long reportIdLong) {
+        try {
+            TotalCountsDto totalCounts = totalCountsRepository.findTotalCountsByReportId(reportIdLong);
+            return totalCounts != null ? totalCounts : TotalCountsDto.of(0, 0, 0);
+        } catch (Exception e) {
+            log.warn("Failed to get total counts for reportId: {}", reportIdLong, e);
+            return TotalCountsDto.of(0, 0, 0);
+        }
+    }
+
+    /**
+     * Task 2: drivingPattern 조회
+     */
+    private DrivingPatternDto getDrivingPattern(Long reportIdLong) {
+        try {
+            List<EventPatternProjection> eventPatterns = behaviorPatternRepository.findEventPatternsByReportId(reportIdLong);
+            return patternAnalyzer.analyzeDrivingPattern(eventPatterns);
+        } catch (Exception e) {
+            log.warn("Failed to get driving pattern for reportId: {}", reportIdLong, e);
+            return createDefaultDrivingPattern();
+        }
+    }
+
+    /**
+     * Task 3: compare 조회
+     */
+    private CompareDto getCompare(Long reportIdLong, TotalCountsDto totalCounts) {
+        try {
+            return compareAnalyzer.analyzeCompare(reportIdLong, totalCounts);
+        } catch (Exception e) {
+            log.warn("Failed to get compare for reportId: {}", reportIdLong, e);
+            return createDefaultCompare(totalCounts);
+        }
+    }
+
+    /**
+     * DrivingPatternDto의 chart를 BehaviorAnalysisResponseDto의 chart로 변환
+     */
+    private List<BehaviorAnalysisResponseDto.WeeklyChart> convertToResponseChart(List<DrivingPatternDto.WeeklyChartDto> charts) {
+        return charts.stream()
+                .map(chart -> BehaviorAnalysisResponseDto.WeeklyChart.builder()
+                        .weekday(chart.getWeekday())
+                        .actions(BehaviorAnalysisResponseDto.Actions.builder()
+                                .hardBrake(convertToResponseActionTimeSlot(chart.getActions().getHardBrake()))
+                                .rapidAccel(convertToResponseActionTimeSlot(chart.getActions().getRapidAccel()))
+                                .laneChange(convertToResponseActionTimeSlot(chart.getActions().getLaneChange()))
+                                .build())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
+    }
 
-        Map<BehaviorType, TimeSlot> representative = calcRepresentativeTimeSlot(points);
+    private BehaviorAnalysisResponseDto.ActionTimeSlot convertToResponseActionTimeSlot(DrivingPatternDto.ActionTimeSlotDto dto) {
+        if (dto == null) {
+            return null;
+        }
+        return BehaviorAnalysisResponseDto.ActionTimeSlot.builder()
+                .timeSlot(dto.getTimeSlot())
+                .count(dto.getCount())
+                .build();
+    }
 
-        return BehaviorTrajectoryResponseDto.builder()
-                .dominantSlots(fillAllBehaviorDow(points))
-                .insight(String.format(
-                        "급제동: %s, 급가속: %s, 차선변경: %s",
-                        toKorean(representative.get(BehaviorType.HARD_BRAKE)),
-                        toKorean(representative.get(BehaviorType.RAPID_ACCEL)),
-                        toKorean(representative.get(BehaviorType.LANE_CHANGE))
-                ))
+    /**
+     * 기본 DrivingPattern 생성
+     */
+    private DrivingPatternDto createDefaultDrivingPattern() {
+        return DrivingPatternDto.builder()
+                .weekday("금요일")
+                .timeslot("저녁")
+                .chart(List.of())
+                .comment("오류가 발생했습니다. 잠시 후 다시 시도해주세요.")
+                .build();
+    }
+
+    /**
+     * 기본 Compare 생성
+     */
+    private CompareDto createDefaultCompare(TotalCountsDto totalCounts) {
+        return CompareDto.builder()
+                .incdec(0.0)
+                .chart(CompareDto.ChartDto.builder()
+                        .hardBrake(CompareDto.BeforeAfterDto.builder()
+                                .before(0)
+                                .current(totalCounts.getHardBrake())
+                                .build())
+                        .rapidAccel(CompareDto.BeforeAfterDto.builder()
+                                .before(0)
+                                .current(totalCounts.getRapidAccel())
+                                .build())
+                        .laneChange(CompareDto.BeforeAfterDto.builder()
+                                .before(0)
+                                .current(totalCounts.getLaneChange())
+                                .build())
+                        .build())
+                .build();
+    }
+
+    /**
+     * 기본 응답 생성 (전체 오류 시)
+     */
+    private BehaviorAnalysisResponseDto createDefaultResponse(String reportId) {
+        TotalCountsDto defaultCounts = TotalCountsDto.of(0, 0, 0);
+        DrivingPatternDto defaultPattern = createDefaultDrivingPattern();
+        CompareDto defaultCompare = createDefaultCompare(defaultCounts);
+
+        return BehaviorAnalysisResponseDto.builder()
+                .reportId(reportId)
+                .totalCounts(BehaviorAnalysisResponseDto.TotalCounts.builder()
+                        .hardBrake(0)
+                        .rapidAccel(0)
+                        .laneChange(0)
+                        .total(0)
+                        .build())
+                .drivingPattern(BehaviorAnalysisResponseDto.DrivingPattern.builder()
+                        .weekday(defaultPattern.getWeekday())
+                        .timeslot(defaultPattern.getTimeslot())
+                        .chart(List.of())
+                        .comment(defaultPattern.getComment())
+                        .build())
+                .compare(BehaviorAnalysisResponseDto.Compare.builder()
+                        .incdec(defaultCompare.getIncdec())
+                        .chart(BehaviorAnalysisResponseDto.Chart.builder()
+                                .hardBrake(BehaviorAnalysisResponseDto.BeforeAfter.builder()
+                                        .before(0)
+                                        .current(0)
+                                        .build())
+                                .rapidAccel(BehaviorAnalysisResponseDto.BeforeAfter.builder()
+                                        .before(0)
+                                        .current(0)
+                                        .build())
+                                .laneChange(BehaviorAnalysisResponseDto.BeforeAfter.builder()
+                                        .before(0)
+                                        .current(0)
+                                        .build())
+                                .build())
+                        .build())
                 .build();
     }
 
     @Override
-    public List<BehaviorDiffResponseDto> getDiff(Long reportId, BehaviorDiffRequestDto req) {
-        BehaviorSummaryResultDto curr = fetchSummary(reportId);
-        BehaviorSummaryResultDto prev = (req != null && req.getPrevReportId() != null) ?
-                fetchSummary(req.getPrevReportId()) : new BehaviorSummaryResultDto();
-
-        return Arrays.asList(
-                buildDiffResponse(BehaviorType.HARD_BRAKE, prev.getHardBrakeCount(), curr.getHardBrakeCount()),
-                buildDiffResponse(BehaviorType.RAPID_ACCEL, prev.getRapidAccelCount(), curr.getRapidAccelCount()),
-                buildDiffResponse(BehaviorType.LANE_CHANGE, prev.getLaneChangeCount(), curr.getLaneChangeCount())
-        );
+    public TotalCountsDto calculateTotalCounts(List<String> drivingIds) {
+        try {
+            return totalCountsRepository.findTotalCountsByDrivingIds(drivingIds);
+        } catch (Exception e) {
+            log.warn("Failed to calculate total counts for drivingIds: {}", drivingIds, e);
+            return TotalCountsDto.of(0, 0, 0);
+        }
     }
 
     @Override
-    public BehaviorCommentResponseDto getComment(Long reportId, BehaviorDiffRequestDto req) {
-        BehaviorSummaryResultDto curr = fetchSummary(reportId);
-        BehaviorSummaryResultDto prev = (req != null && req.getPrevReportId() != null) ?
-                fetchSummary(req.getPrevReportId()) : new BehaviorSummaryResultDto();
-
-        String text = String.format("급제동 %s, 급가속 %s, 차선변경 %s",
-                arrow(prev.getHardBrakeCount(), curr.getHardBrakeCount()),
-                arrow(prev.getRapidAccelCount(), curr.getRapidAccelCount()),
-                arrow(prev.getLaneChangeCount(), curr.getLaneChangeCount()));
-
-        return BehaviorCommentResponseDto.builder().text(text).build();
+    public DrivingPatternDto analyzeDrivingPattern(List<String> drivingIds) {
+        try {
+            List<EventPatternProjection> eventPatterns = behaviorPatternRepository.findEventPatternsByDrivingIds(drivingIds);
+            return patternAnalyzer.analyzeDrivingPattern(eventPatterns);
+        } catch (Exception e) {
+            log.warn("Failed to analyze driving pattern for drivingIds: {}", drivingIds, e);
+            return createDefaultDrivingPattern();
+        }
     }
 
-    // ---- private 유틸 메서드 (Impl 내부용) ----
-    private BehaviorSummaryResultDto fetchSummary(Long reportId) {
-        return repo.fetchSummary(reportId);
+    @Override
+    public CompareDto compareWithPrevious(String reportId, TotalCountsDto currentCounts) {
+        try {
+            return compareAnalyzer.analyzeCompare(extractReportIdNumber(reportId), currentCounts);
+        } catch (Exception e) {
+            log.warn("Failed to compare with previous for reportId: {}", reportId, e);
+            return createDefaultCompare(currentCounts);
+        }
     }
 
-    private BehaviorDiffResponseDto buildDiffResponse(BehaviorType type, int prev, int curr) {
-        int diff = curr - prev;
-        BehaviorDiffResponseDto.Direction dir = diff > 0 ? BehaviorDiffResponseDto.Direction.INCREASE : 
-                                               (diff < 0 ? BehaviorDiffResponseDto.Direction.DECREASE : 
-                                                          BehaviorDiffResponseDto.Direction.FLAT);
-        return BehaviorDiffResponseDto.builder()
-                .behavior(type).prev(prev).curr(curr).diff(diff).direction(dir).build();
-    }
-
-    private String arrow(int prev, int curr) {
-        return curr > prev ? "▲" : curr < prev ? "▼" : "▬";
-    }
-
-    private List<BehaviorTrajectoryResponseDto.DominantSlot> fillAllBehaviorDow(List<TrajectoryPointResultDto> points) {
-        // TODO: 기존 로직 그대로 구현
-        return Collections.emptyList();
-    }
-
-    private Map<BehaviorType, TimeSlot> calcRepresentativeTimeSlot(List<TrajectoryPointResultDto> points) {
-        // TODO: 기존 로직 그대로 구현
-        return new HashMap<>();
-    }
-
-    private String toKorean(TimeSlot ts) {
-        return ts == null ? "-" : ts.getKorean();
+    /**
+     * reportId에서 숫자 부분 추출 (u1_r3_20250901 -> 3)
+     */
+    private Long extractReportIdNumber(String reportId) {
+        try {
+            // u1_r3_20250901 형식에서 r 다음 숫자 추출
+            String[] parts = reportId.split("_");
+            for (String part : parts) {
+                if (part.startsWith("r")) {
+                    return Long.parseLong(part.substring(1));
+                }
+            }
+            // 만약 패턴이 맞지 않으면 기본값 1L 사용
+            log.warn("Cannot extract reportId number from: {}, using default 1L", reportId);
+            return 1L;
+        } catch (Exception e) {
+            log.warn("Error parsing reportId: {}, using default 1L", reportId, e);
+            return 1L;
+        }
     }
 }
